<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond">

    <TextView
        android:id="@+id/lblQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/libQuestion1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />
    <RadioGroup
        android:id="@+id/grpReponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/lblQuest">
        <RadioButton
            android:id="@+id/rdbVrai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libVrai"/>
        <RadioButton
            android:id="@+id/rdbFaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libFaux"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/ligneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grpReponse"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/btnVerif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/libVerif"
            android:layout_margin="25dp"/>
        <Button
            android:id="@+id/btnSuivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/libSuivant"
            android:layout_margin="25dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/ligneBtn" />

</RelativeLayout>