<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond">
    <ImageView
        android:id="@+id/imageQuizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/quizz"/>
    <TextView
        android:id="@+id/textQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/libQuestion"
        android:layout_below="@id/imageQuizz"/>
    <LinearLayout
        android:id="@+id/ligne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textQuest">
        <TextView
            android:id="@+id/textNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libNom" />
        <EditText
            android:id="@+id/editNom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/boutonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libOK"
        android:layout_margin="20dp"
        android:layout_below="@id/ligne"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>