<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fond"
        android:orientation="vertical">
        <TextView
            android:id="@+id/libQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/libQuestion4"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>
        <ListView
            android:id="@+id/listeCouleurs"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:choiceMode="multipleChoice"
            android:layout_below="@id/libQuest">
        </ListView>
        <LinearLayout
            android:id="@+id/ligneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listeCouleurs"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/btnVerif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/libVerif"
                android:layout_margin="25dp"/>
            <Button
                android:id="@+id/btnSuivant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/libSuivant"
                android:layout_margin="25dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/ligneBtn" />
    </RelativeLayout>
</ScrollView>